tools/lsp/squirrel/grammar/jsligo/test/corpus/rest_patterns.txt
=========
rest-pattern: array / list rest
=========

let larger_list: list<int> = list([5, ...my_list]);

---

(source_file
  (let_decl
    (var_pattern (NameDecl))
    (app_type (TypeName) (TypeName))
    (call_expr
      (lambda (Name))
      (arguments
        (array_literal (Int)
        (array_item_rest_expr (Name)))))))

=========
rest-pattern: object rest
=========

let xy_translate = ([p, vec]: [point, vector]): point =>
  ({...p, x: p.x + vec.dx, y: p.y + vec.dy});

---

(source_file
  (let_decl
    (var_pattern (NameDecl))
    (fun_expr
      (parameter
        (array_literal (Name) (Name))
        (tuple_type (TypeName) (TypeName)))
      (TypeName)
      (body
        (paren_expr
          (object_literal
            (property (Name))
            (property
              (property_name (Name))
              (binary_operator
                (data_projection (Name) (Name))
                (data_projection (Name) (Name))))
            (property
              (property_name (Name))
              (binary_operator
                (data_projection (Name) (Name))
                (data_projection (Name) (Name))))))))))
